// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownParser (AST snapshots) ATX heading level 1 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "Heading 1",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 1,
      },
      "type": "heading",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) blockquote simple 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": " This is a quote  that continues.",
          "type": "text",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) blockquote with emphasis and link 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": " ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "emphasis",
              "type": "text",
            },
          ],
          "type": "emphasis",
        },
        {
          "content": " and ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "link",
              "type": "text",
            },
          ],
          "metadata": {
            "url": "https://example.com",
          },
          "type": "link",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) bold text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "bold text",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) code block preserves empty lines 1`] = `
{
  "children": [
    {
      "content": "line1

line3

line5",
      "type": "code_block",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) code block preserves newlines 1`] = `
{
  "children": [
    {
      "content": "function test() {
  console.log("hello");
  return true;
}",
      "type": "code_block",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) complex nested lists with formatting 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "Main task",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": ": Complete the project",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 1,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Subtask with ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "emphasis",
              "type": "text",
            },
          ],
          "type": "emphasis",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Another subtask with ",
          "type": "text",
        },
        {
          "content": "code",
          "type": "code_inline",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Deep nested ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "bold",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": " task",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 4,
        "number": 1,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Another deep task with ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "link",
              "type": "text",
            },
          ],
          "metadata": {
            "url": "https://test.com",
          },
          "type": "link",
        },
      ],
      "metadata": {
        "depth": 4,
        "number": 2,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "children": [
            {
              "content": "Second main task",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": ": Review and test",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 2,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Review ",
          "type": "text",
        },
        {
          "content": "codebase",
          "type": "code_inline",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Test ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "critical paths",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) complex team update message 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "Hello, Team! 👋",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 1,
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "content": "I hope you're all doing well. Here are the updates for ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "this week",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": ": ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "content": "✅ Completed Tasks",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 2,
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "content": "Finished the ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "homepage redesign",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Deployed the ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "v2.3 update",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Fixed the login authentication bug",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "🚀 Upcoming Goals",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 2,
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "content": "Launch the ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "marketing campaign",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 1,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Test the ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "mobile app beta",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 2,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Prepare ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "quarterly report",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 3,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "type": "hr",
    },
    {
      "children": [
        {
          "content": " ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "Reminder:",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": " The next team meeting is on ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "Monday at 10 AM",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": ".    Please bring your progress reports. ",
          "type": "text",
        },
      ],
      "type": "blockquote",
    },
    {
      "children": [
        {
          "content": "Thanks,  ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "Alex",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) empty document 1`] = `
{
  "children": [],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) fenced code block 1`] = `
{
  "children": [
    {
      "content": "code content",
      "type": "code_block",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) fenced code block with language 1`] = `
{
  "children": [
    {
      "content": "const x = 1;",
      "metadata": {
        "language": "javascript",
      },
      "type": "code_block",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) flush with open formatting 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "**incomplete bold",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) horizontal rule *** only 1`] = `
{
  "children": [
    {
      "type": "hr",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) horizontal rule --- between paragraphs 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "First",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "hr",
    },
    {
      "children": [
        {
          "content": "Second",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) incomplete link syntax 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "[link text without url] and [another](incomplete",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) inline code 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "Some ",
          "type": "text",
        },
        {
          "content": "inline code",
          "type": "code_inline",
        },
        {
          "content": " here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) italic text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "italic text",
              "type": "text",
            },
          ],
          "type": "emphasis",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) link with emphasis 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "content": "bold link",
                  "type": "text",
                },
              ],
              "type": "strong",
            },
          ],
          "metadata": {
            "url": "url",
          },
          "type": "link",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) list item with multiple paragraphs 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "First item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "  Second paragraph of first item ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "content": "Second item with single paragraph",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) list items with formatting 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "Bold item",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": " with normal text",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "children": [
            {
              "content": "Italic item",
              "type": "text",
            },
          ],
          "type": "emphasis",
        },
        {
          "content": " and ",
          "type": "text",
        },
        {
          "content": "code",
          "type": "code_inline",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "children": [
            {
              "content": "Link item",
              "type": "text",
            },
          ],
          "metadata": {
            "url": "https://example.com",
          },
          "type": "link",
        },
        {
          "content": " with description",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "children": [
            {
              "content": "Bold ordered",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": " item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 1,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Item with ",
          "type": "text",
        },
        {
          "content": "inline code",
          "type": "code_inline",
        },
        {
          "content": " snippet",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 2,
        "ordered": true,
      },
      "type": "list_item",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) malformed markdown 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "**bold without closing *italic without closing [link without closing",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) mixed bold+italic **_text_** 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "content": "text",
                  "type": "text",
                },
              ],
              "type": "emphasis",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) mixed bold+italic _**text**_ 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "content": "text",
                  "type": "text",
                },
              ],
              "type": "strong",
            },
          ],
          "type": "emphasis",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) mixed content 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "Heading",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 1,
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "content": "This is ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "bold",
              "type": "text",
            },
          ],
          "type": "strong",
        },
        {
          "content": " and ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "italic",
              "type": "text",
            },
          ],
          "type": "emphasis",
        },
        {
          "content": " with ",
          "type": "text",
        },
        {
          "content": "code",
          "type": "code_inline",
        },
        {
          "content": ". ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": "console.log("hello");",
      "metadata": {
        "language": "js",
      },
      "type": "code_block",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) mixed nested lists 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "First ordered item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 1,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Unordered nested",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Another unordered",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Second ordered item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 2,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Nested ordered",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": 1,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Another nested ordered",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": 2,
        "ordered": true,
      },
      "type": "list_item",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) mixed strong+strike 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "content": "gone",
                  "type": "text",
                },
              ],
              "type": "strikethrough",
            },
          ],
          "type": "strong",
        },
        {
          "content": " and ",
          "type": "text",
        },
        {
          "children": [
            {
              "children": [
                {
                  "content": "gone too",
                  "type": "text",
                },
              ],
              "type": "strong",
            },
          ],
          "type": "strikethrough",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) multiple heading levels 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "H1",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 1,
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "content": "H2",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 2,
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "content": "H3",
          "type": "text",
        },
      ],
      "metadata": {
        "level": 3,
      },
      "type": "heading",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) multiple paragraphs 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "Paragraph 1 ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "content": "Paragraph 2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) nested emphasis 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "bold ",
              "type": "text",
            },
            {
              "children": [
                {
                  "content": "and italic",
                  "type": "text",
                },
              ],
              "type": "emphasis",
            },
            {
              "content": " text",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) nested unordered list 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "First item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Nested item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Another nested item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Second item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "More nesting",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 2,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Deep nesting",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 3,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) non-link brackets 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "This [is not a link] and neither is [this one",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) only whitespace 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "     	  ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) ordered list (simple) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "First item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 1,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Second item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 2,
        "ordered": true,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Third item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": 3,
        "ordered": true,
      },
      "type": "list_item",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) simple link 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "link text",
              "type": "text",
            },
          ],
          "metadata": {
            "url": "https://example.com",
          },
          "type": "link",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) simple paragraph 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "Hello world",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) strikethrough 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "text",
              "type": "text",
            },
          ],
          "type": "strikethrough",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) triple asterisk yields bold+italic 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "text",
              "type": "text",
            },
          ],
          "type": "strong_emphasis",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) triple underscore strong emphasis 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "text",
              "type": "text",
            },
          ],
          "type": "strong_emphasis",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) triple-asterisk strong emphasis (with nested em) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "very important",
              "type": "text",
            },
          ],
          "type": "strong_emphasis",
        },
        {
          "content": " and ***nested ",
          "type": "text",
        },
        {
          "children": [
            {
              "content": "em",
              "type": "text",
            },
          ],
          "type": "emphasis",
        },
        {
          "content": " inside***",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) underscore italic 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "text",
              "type": "text",
            },
          ],
          "type": "emphasis",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) underscore strong 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "text",
              "type": "text",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "document",
}
`;

exports[`MarkdownParser (AST snapshots) unordered list (simple) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "content": "First item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Second item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
    {
      "children": [
        {
          "content": "Third item",
          "type": "text",
        },
      ],
      "metadata": {
        "depth": 1,
        "number": undefined,
        "ordered": false,
      },
      "type": "list_item",
    },
  ],
  "type": "document",
}
`;
